# opencv_sandbox

./: CMakeLists.txt  README.md
cmake/: FindOpenCV.cmake.old
resources/: glslsandbox.glsl  shadertoy.glsl
src/: drawLandmarks.hpp  main.cpp
src/Core/: EventHandler.cpp  Platform.h  Window.cpp  Window.h
src/GLObjects/: RenderContext.h  Texture.h
src/Rendering/: View.cpp  View.h
superbuild/: CMakeLists.txt
